Remove dependency on Log4j by using JDK logging everywhere